--- a/app/src/main/res/layout/dialog_delete_messages_history.xml
+++ b/app/src/main/res/layout/dialog_delete_messages_history.xml
@@ -30,6 +30,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/black"
+            style="@style/Widget.Material3.Button.ElevatedButton"
             android:text="@string/confirm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
