added turning off remind notification

--- a/app/src/main/res/layout/dialog_notification_settings.xml
+++ b/app/src/main/res/layout/dialog_notification_settings.xml
@@ -19,6 +19,30 @@
         android:text="@string/notification_settings_hint"
         android:textSize="16sp" />
 
+    <LinearLayout
+        android:id="@+id/offLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
+        android:orientation="horizontal"
+        android:paddingVertical="12dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:text="@string/disable"
+            android:textSize="20sp" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="16dp"
+        android:background="@color/gray" />
 
     <LinearLayout
         android:id="@+id/hours3Layout"
